--- a/package.json
+++ b/package.json
@@ -4,28 +4,27 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "node_modules/.bin/mocha"
+    "test": "node_modules/.bin/mocha --timeout 10000"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.15.5",
-    "express-session": "^1.13.0",
-    "helmet": "^1.1.0",
-    "pug": "^2.0.0-rc.4",
+    "express": "~4.16.0",
+    "express-session": "^1.15.6",
+    "helmet": "^3.8.2",
+    "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.9",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.33.4",
-    "serve-favicon": "~2.4.5"
+    "pug": "2.0.0-beta11",
+    "sequelize": "^4.33.4"
   },
   "devDependencies": {
-    "mocha": "^3.2.0",
+    "mocha": "^4.0.1",
     "passport-stub": "^1.1.1",
-    "supertest": "^1.2.0"
+    "supertest": "^3.1.0"
   }
 }
