--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "helmet": "^3.8.2",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "node-uuid": "^1.4.7",
+    "uuid": "^3.3.2",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.9",
     "pg": "^7.4.1",
